[package]
name = "commander"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
macroquad = { version = "0.4.14" }
serde = { version = "1.0.219", features = ["derive"] }
sui_sdk = { git = "https://github.com/mystenlabs/sui", package = "sui-sdk"}
sui_types = { git = "https://github.com/mystenlabs/sui", package = "sui-types" }
sui_json_rpc_types = { git = "https://github.com/mystenlabs/sui", package = "sui-json-rpc-types" }
move_core_types = { git = "https://github.com/MystenLabs/sui", package = "move-core-types" }
tokio = { version = "1.46.1", features = ["full"] }
bcs = { git = "https://github.com/zefchain/bcs", package = "bcs" }
