[package]
name = "commander"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
macroquad = { version = "0.4.14" }
thiserror = "2.0.12"
quad-storage = "0.1.3"
gamepads = "0.1.7"
lazy_static = "1.5.0"
serde_json = "1.0.141"
rand = "0.8.5"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.46.1", features = ["net", "rt-multi-thread"] }
rustls = { version = "0.23.29", features = ["aws_lc_rs"] }

open = "5"
axum = "0.8.4"
reqwest = "0.12.22"

base64 = "0.22.1"
bcs = "0.1.6"
sui-rpc = "0.0.6"
sui-sdk-types = { version = "0.0.6", features = ["serde", "hash"] }
sui-crypto = { version = "0.0.6", features = ["ed25519", "pem"] }
sui-transaction-builder = "0.0.6"
once_cell = "1.21.3"
strum = { version = "0.27.2", features = ["derive"] }

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"

[features]
# default = ["cache"]
default = []
cache = []
